cmake_minimum_required(VERSION 3.8)

# Pull in all the various puzzle solvers for this year.
add_subdirectory("1-1")
add_subdirectory("1-2")
add_subdirectory("2-1")
add_subdirectory("2-2")
add_subdirectory("3-1")
add_subdirectory("3-2")
add_subdirectory("4-1")
add_subdirectory("4-2")
add_subdirectory("5-1")
add_subdirectory("5-2")
add_subdirectory("6-1")
add_subdirectory("6-2")
add_subdirectory("7-1")
add_subdirectory("7-2")
add_subdirectory("8-1")
add_subdirectory("8-2")
add_subdirectory("9-1")
add_subdirectory("9-2")
add_subdirectory("10-1")
add_subdirectory("10-2")
add_subdirectory("11-1")
add_subdirectory("11-2")
