[package]
name = "aoc-2020"
version = "1.0.0"
description = "Rhymu8354's solutions to Advent of Code 2020"
authors = ["Richard Walters <rwalters@digitalstirling.com>"]
edition = "2018"
license-file = "LICENSE.txt"
readme = "README.md"
categories = []
keywords = ["aoc"]
repository = "https://github.com/rhymu8354/advent-of-code.git"

[[bin]]
name = "aoc-2020-01-1"
path = "src/bin/01-1.rs"

[[bin]]
name = "aoc-2020-01-2"
path = "src/bin/01-2.rs"

[[bin]]
name = "aoc-2020-02-1"
path = "src/bin/02-1.rs"

[[bin]]
name = "aoc-2020-02-2"
path = "src/bin/02-2.rs"

[dependencies]
# anyhow = "1.0"
# async-ctrlc = "1.2"
# async-std = "1.6"
# futures = "0.3"
# futures-timer = "3.0"
# structopt = "0.3"
