[package]
name = "aoc-2020"
version = "1.0.0"
description = "Rhymu8354's solutions to Advent of Code 2020"
authors = ["Richard Walters <rwalters@digitalstirling.com>"]
edition = "2018"
license-file = "LICENSE.txt"
readme = "README.md"
categories = []
keywords = ["aoc"]
repository = "https://github.com/rhymu8354/advent-of-code.git"

[features]
default = []
visualize = []

[[bin]]
name = "aoc-2020-01-1"
path = "src/bin/01-1.rs"

[[bin]]
name = "aoc-2020-01-2"
path = "src/bin/01-2.rs"

[[bin]]
name = "aoc-2020-02-1"
path = "src/bin/02-1.rs"

[[bin]]
name = "aoc-2020-02-2"
path = "src/bin/02-2.rs"

[[bin]]
name = "aoc-2020-03-1"
path = "src/bin/03-1.rs"

[[bin]]
name = "aoc-2020-03-2"
path = "src/bin/03-2.rs"

[[bin]]
name = "aoc-2020-04-1"
path = "src/bin/04-1.rs"

[[bin]]
name = "aoc-2020-04-2"
path = "src/bin/04-2.rs"

[[bin]]
name = "aoc-2020-05-1"
path = "src/bin/05-1.rs"

[[bin]]
name = "aoc-2020-05-2"
path = "src/bin/05-2.rs"

[[bin]]
name = "aoc-2020-06-1"
path = "src/bin/06-1.rs"

[[bin]]
name = "aoc-2020-06-2"
path = "src/bin/06-2.rs"

[[bin]]
name = "aoc-2020-07-1"
path = "src/bin/07-1.rs"

[[bin]]
name = "aoc-2020-07-2"
path = "src/bin/07-2.rs"

[[bin]]
name = "aoc-2020-08-1"
path = "src/bin/08-1.rs"

[[bin]]
name = "aoc-2020-08-2"
path = "src/bin/08-2.rs"

[[bin]]
name = "aoc-2020-09-1"
path = "src/bin/09-1.rs"

[[bin]]
name = "aoc-2020-09-2"
path = "src/bin/09-2.rs"

[[bin]]
name = "aoc-2020-10-1"
path = "src/bin/10-1.rs"

[[bin]]
name = "aoc-2020-10-2"
path = "src/bin/10-2.rs"

[[bin]]
name = "aoc-2020-11-1"
path = "src/bin/11-1.rs"

[[bin]]
name = "aoc-2020-11-2"
path = "src/bin/11-2.rs"

[[bin]]
name = "aoc-2020-12-1"
path = "src/bin/12-1.rs"

[[bin]]
name = "aoc-2020-12-2"
path = "src/bin/12-2.rs"

[[bin]]
name = "aoc-2020-13-1"
path = "src/bin/13-1.rs"

[[bin]]
name = "aoc-2020-13-2"
path = "src/bin/13-2.rs"

[[bin]]
name = "aoc-2020-14-1"
path = "src/bin/14-1.rs"

[[bin]]
name = "aoc-2020-14-2"
path = "src/bin/14-2.rs"

[[bin]]
name = "aoc-2020-15-1"
path = "src/bin/15-1.rs"

[[bin]]
name = "aoc-2020-15-2"
path = "src/bin/15-2.rs"

[[bin]]
name = "aoc-2020-16-1"
path = "src/bin/16-1.rs"

[[bin]]
name = "aoc-2020-16-2"
path = "src/bin/16-2.rs"

[[bin]]
name = "aoc-2020-17-1"
path = "src/bin/17-1.rs"

[[bin]]
name = "aoc-2020-17-2"
path = "src/bin/17-2.rs"

[[bin]]
name = "aoc-2020-18-1"
path = "src/bin/18-1.rs"

[[bin]]
name = "aoc-2020-18-2"
path = "src/bin/18-2.rs"

[[bin]]
name = "aoc-2020-19-1"
path = "src/bin/19-1.rs"

[[bin]]
name = "aoc-2020-19-2"
path = "src/bin/19-2.rs"

[[bin]]
name = "aoc-2020-20-1"
path = "src/bin/20-1.rs"

[[bin]]
name = "aoc-2020-20-2"
path = "src/bin/20-2.rs"

[[bin]]
name = "aoc-2020-21-1"
path = "src/bin/21-1.rs"

[[bin]]
name = "aoc-2020-21-2"
path = "src/bin/21-2.rs"

[[bin]]
name = "aoc-2020-22-1"
path = "src/bin/22-1.rs"

[[bin]]
name = "aoc-2020-22-2"
path = "src/bin/22-2.rs"

[[bin]]
name = "aoc-2020-23-1"
path = "src/bin/23-1.rs"

[[bin]]
name = "aoc-2020-23-2"
path = "src/bin/23-2.rs"

[[bin]]
name = "aoc-2020-24-1"
path = "src/bin/24-1.rs"

[[bin]]
name = "aoc-2020-24-2"
path = "src/bin/24-2.rs"

[[bin]]
name = "aoc-2020-25-1"
path = "src/bin/25-1.rs"

[dependencies]
# anyhow = "1.0"
# async-ctrlc = "1.2"
# async-std = "1.6"
# futures = "0.3"
# futures-timer = "3.0"
# structopt = "0.3"
